Fix C++ task and format

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
 			"command": "clang++",
 			"args": [
 				"-std=c++17",
-				"-stdlib=libc++",
+				// "-stdlib=libc++",
 				"-g",
 				"${file}",
 				"-o",
