--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,4 +22,6 @@
     "lldb.displayFormat": "auto",
     "lldb.showDisassembly": "auto",
     "lldb.dereferencePointers": true,
+    "editor.suggest.preview": true,
+    "bookmarks.saveBookmarksInProject": true,
 }
