剑指 Offer 14- II. 剪绳子 II

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,4 +24,5 @@
     "lldb.dereferencePointers": true,
     "editor.suggest.preview": true,
     "bookmarks.saveBookmarksInProject": true,
+    "gitlens.mode.active": "zen"
 }
